"Sequence number alignment issue solved"

--- a/src/main/java/org/ednovo/gooru/client/mvp/folder/toc/util/folderCollectionView.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/folder/toc/util/folderCollectionView.css
@@ -51,3 +51,8 @@
 .foldercollection.child {
     background: url('../images/folders/panel/collection-small-icon.png') no-repeat 89px 4px;
 }
+.sequenceNumner{
+	position: absolute;
+	margin-left: -44px;
+	color:#06c;
+}
